Спринт 10. Добавить изменения в тестах.