@@ -13,7 +13,7 @@ public class ValidationServiceClass implements ValidationService {
 
     @Override
     public void filmValidate(Film film) {
-        if (film.getName() == null || film.getName().isBlank()) {
+        if (film.getName() == null || film.getName().trim().isEmpty()) {
             throw new ConditionsNotMetException("Название не может быть пустым");
         }
         if (film.getDuration() <= 0) {
@@ -32,7 +32,7 @@ public class ValidationServiceClass implements ValidationService {
         if (newFilm.getId() == null) {
             throw new ConditionsNotMetException("Id должен быть указан");
         }
-        if (newFilm.getDescription() == null || newFilm.getDescription().isBlank()) {
+        if (newFilm.getDescription() == null || newFilm.getDescription().trim().isEmpty()) {
             throw new ConditionsNotMetException("Описание не может быть пустым");
         }
         if (newFilm.getDescription().length() <= 200) {
@@ -41,21 +41,21 @@ public class ValidationServiceClass implements ValidationService {
         if (newFilm.getDuration() <= 0) {
             throw new ConditionsNotMetException("Продолжительность фильма должна быть положительным числом");
         }
-        if (newFilm.getReleaseDate().isAfter(LocalDate.of(1895, Month.DECEMBER, 28))) {
+        if (newFilm.getReleaseDate().isBefore(LocalDate.of(1895, Month.DECEMBER, 28))) {
             throw new ConditionsNotMetException("Дата релиза должна быть не раньше 28 декабря 1895 года");
         }
     }
 
     @Override
     public void userValidate(User user) {
-        if (user.getEmail() == null || user.getEmail().isBlank()) {
+        if (user.getEmail() == null || user.getEmail().trim().isEmpty()) {
             throw new ConditionsNotMetException("Имейл должен быть указан");
         }
         if (!user.getEmail().contains("@")) {
             throw new ConditionsNotMetException("Имейл должен содержать символ @");
         }
 
-        if (user.getLogin() == null || user.getLogin().isBlank()) {
+        if (user.getLogin() == null || user.getLogin().trim().isEmpty()) {
             throw new ConditionsNotMetException("Логин не может быть пустым");
         }
         if (user.getLogin().contains(" ")) {
@@ -71,17 +71,17 @@ public class ValidationServiceClass implements ValidationService {
         if (newUser.getId() == null) {
             throw new ConditionsNotMetException("Id должен быть указан");
         }
-        if ((newUser.getEmail() == null || newUser.getEmail().isBlank())
-                && (newUser.getLogin() == null || newUser.getLogin().isBlank())
+        if ((newUser.getEmail() == null || newUser.getEmail().trim().isEmpty())
+                && (newUser.getLogin() == null || newUser.getLogin().trim().isEmpty())
                 && (newUser.getBirthday() == null)) {
             throw new ConditionsNotMetException("Все поля пусты");
         }
-        if (newUser.getEmail() != null || !newUser.getEmail().isBlank()) {
+        if (newUser.getEmail() != null || !newUser.getEmail().trim().isEmpty()) {
             if (!newUser.getEmail().contains("@")) {
                 throw new ConditionsNotMetException("Имейл должен содержать символ @");
             }
         }
-        if (newUser.getBirthday().isBefore(LocalDate.now())) {
+        if (newUser.getBirthday().isAfter(LocalDate.now())) {
             throw new ConditionsNotMetException("Дата рождения не может быть в будущем");
         }
         if (newUser.getLogin().contains(" ")) {
